syntax = "proto3";

package proto;
import "customer/grpc/proto/customer.proto";
option go_package = "customer/grpc/pb";

message CustomerResponse {
    Customer customer = 1;
}

message DetailCustomerRequest {
    string id = 1;
}

service CustomerService {
    rpc DetailCustomer (DetailCustomerRequest) returns (CustomerResponse);
}